--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "template-initial-config-next-ts-eslint-prettier",
   "version": "1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
